<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
      <groupId>com.learn</groupId>

      <artifactId>Sortings</artifactId>

      <version>1.0</version>
   </parent>

   <modelVersion>4.0.0</modelVersion>

   <groupId>com.learn</groupId>

   <artifactId>QuickSorting</artifactId>

   <packaging>jar</packaging>

   <version>1.0</version>

   <name>${project.artifactId}</name>

   <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss</maven.build.timestamp.format>
    <maven.test.skip>false</maven.test.skip>
    <maven.javadoc.skip>true</maven.javadoc.skip>
    <java.version>21</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release><!-- Java 9 and Beyond -->
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <!-- Other than boot -->
  </properties>

   <dependencies>

      <dependency>
         <groupId>junit</groupId>

         <artifactId>junit</artifactId>

         <version>4.13.2</version>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-jar-plugin</artifactId>

            <configuration>
               <archive>
                  <addMavenDescriptor>false</addMavenDescriptor>
               </archive>
            </configuration>
         </plugin>

         <plugin>
            <artifactId>maven-resources-plugin</artifactId>

            <configuration>
               <encoding>UTF-8</encoding>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <reporting>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-surefire-report-plugin</artifactId>

            <version>2.5</version>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-surefire-plugin</artifactId>

            <configuration>
               <argLine>-Xms128m -Xmx1024m -XX:MaxPermSize=256m</argLine>

               <disableXmlReport>true</disableXmlReport>
            </configuration>
         </plugin>
      </plugins>
   </reporting>
</project>
